# sw2

./: README.md
adv_cpp/1-08.10.2017/: ex1.cpp  ex1.txt
adv_cpp/1-08.10.2017-tpl/: ex1.cpp  ex2  ex2.cpp  makefile  slides.txt
adv_cpp/10-09.12.2017-op/: ex1.cpp  ex2.cpp  ex3.cpp
adv_cpp/11-16.12.2017-algo2/: 01  01.cpp  02  02.cpp  03  03.cpp  04  04.cpp  05.cpp  06  06.cpp  07.cpp  08  08.cpp
adv_cpp/12-13.02.2018-utils/: 01.cpp  02.cpp
adv_cpp/13-20.01.2017-utils2/: ex01.cpp  ex02.cpp  ex03.cpp
adv_cpp/14-20.01.2017-algo3/: ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp  ex05.cpp  ex06.cpp  ex07.cpp  ex08.cpp  ex09.cpp  ex10.cpp
adv_cpp/2-14.10.2017/: a.out  ex2.cpp  makefile
adv_cpp/2-14.10.2017-exc/: ex1.cpp  lecture.txt
adv_cpp/3-14.10.2017/: a.out  ex1.cpp  ex2.cpp
adv_cpp/3-14.10.2017-tpl/: ex2.cpp  ex3.cpp  ex4.cpp  makefile
adv_cpp/4-21.10.2017/: ex1.cpp  ex2.cpp  makefile
adv_cpp/5-21.10.2017-ptr/: ex3.cpp
adv_cpp/6-02.12.2017-poly/: 01.cpp  02.cpp  ex1.cpp  ex2.cpp  notatki.txt
adv_cpp/7-03.12.2017-stl/: ex01.cpp
adv_cpp/8-03.12.2017-containers/: ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp
adv_cpp/final/: CMakeLists.txt  matrix.cpp  serialize.cpp
adv_cpp/final/done/: matrix.cpp  prime_numbers.cpp  ptr_shared.cpp  ring_buffer.cpp
adv_cpp/final/others/: prime_numbers.cpp  ptr_unique.cpp  serialize.cpp
final_work/: todo.txt
final_work/topics/: topics.txt
unit_testing/: gmock-howto.txt
unit_testing/2-08_10_2017/: todo.txt
unit_testing/3-21_10_2017/: IShape.hpp  Picture.cpp  Picture.hpp  Rectangle.cpp  Rectangle.hpp  howto.txt  (+5 more)
(+56 files in other folders)
